add mongo reader support for complex selected table form presentation